Translate index.
No tests yet.
I'll need some time to find out how to translate Mockito based tests to Dart.

R=brianwilkerson@google.com, devoncarew@google.com
BUG=

Review URL: https://codereview.chromium.org//135803003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge@31729 260f80e4-7a28-3924-810f-c04153c831b5